--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,22 @@
 <resources>
-    <string name="app_name">Une pièce</string>
+    <string name="app_name" translatable="false">Une pièce</string>
+
+    <string name="fetch">Fetch data</string>
     <string name="snc_btn">sync button</string>
+
+    <string name="order_by">Order by</string>
+    <string name="col_price">Price</string>
+    <string name="col_name">Name</string>
+
+    <string name="tab_all">All</string>
+    <string name="tab_favs">Favorites</string>
+
+    <string name="crypto">"Crypto's name : "</string>
+    <string name="symbol">"Symbol : "</string>
+    <string name="actual_price">"Actual price : "</string>
+    <string name="change">Rate :</string>
+    <string name="color">"Color : "</string>
+    <string name="rank">Rank:</string>
+    <string name="volume">Volume /24h:</string>
+    <string name="cap">Market Cap:</string>
 </resources>
