--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="order_by">Order by</string>
     <string name="col_price">Price</string>
     <string name="col_name">Name</string>
+    <string name="col_rank">Rank</string>
 
     <string name="tab_all">All</string>
     <string name="tab_favs">Favorites</string>
